--- a/src/pages/main/style.scss
+++ b/src/pages/main/style.scss
@@ -1,1 +1,9 @@
-@import "../../scss/main.scss";
+@import "../../scss/base/normalize.scss";
+
+@import "../../scss/abstract/constants.scss";
+@import "../../scss/abstract/mixins.scss";
+@import "../../scss/abstract/placeholder.scss";
+
+@import "../../scss/base/fonts.scss";
+@import "../../scss/base/base.scss";
+@import "../../scss/base/buttons.scss";
