feat: add container, header, footer styles

--- a/src/pages/main/style.scss
+++ b/src/pages/main/style.scss
@@ -7,3 +7,8 @@
 @import "../../scss/base/fonts.scss";
 @import "../../scss/base/base.scss";
 @import "../../scss/base/buttons.scss";
+
+@import "../../scss/layouts/container.scss";
+@import "../../scss/layouts/header.scss";
+
+@import "../../scss/layouts/footer.scss";
