feat: add not-only, our friends styles

--- a/src/pages/main/style.scss
+++ b/src/pages/main/style.scss
@@ -10,5 +10,8 @@
 
 @import "../../scss/layouts/container.scss";
 @import "../../scss/layouts/header.scss";
-
+@import "../../scss/components/not-only";
+@import "../../scss/components/about";
+@import "../../scss/components/our-friends";
+@import "../../scss/components/help";
 @import "../../scss/layouts/footer.scss";
