--- a/src/pages/main/style.scss
+++ b/src/pages/main/style.scss
@@ -14,4 +14,5 @@
 @import "../../scss/components/about";
 @import "../../scss/components/our-friends";
 @import "../../scss/components/help";
+@import "../../scss/components/in-addition";
 @import "../../scss/layouts/footer.scss";
