--- a/src/pages/main/style.scss
+++ b/src/pages/main/style.scss
@@ -10,6 +10,9 @@
 
 @import "../../scss/layouts/container.scss";
 @import "../../scss/layouts/header.scss";
+@import "../../scss/components/menu";
+@import "../../scss/base/burger";
+
 @import "../../scss/components/not-only";
 @import "../../scss/components/about";
 @import "../../scss/components/our-friends";
