feat: add slider

--- a/src/pages/main/style.scss
+++ b/src/pages/main/style.scss
@@ -1,15 +1,15 @@
-@import "../../scss/base/normalize.scss";
+@import "../../scss/base/normalize";
 
-@import "../../scss/abstract/constants.scss";
-@import "../../scss/abstract/mixins.scss";
-@import "../../scss/abstract/placeholder.scss";
+@import "../../scss/abstract/constants";
+@import "../../scss/abstract/mixins";
+@import "../../scss/abstract/placeholder";
 
-@import "../../scss/base/fonts.scss";
-@import "../../scss/base/base.scss";
-@import "../../scss/base/buttons.scss";
+@import "../../scss/base/fonts";
+@import "../../scss/base/base";
+@import "../../scss/base/buttons";
 
-@import "../../scss/layouts/container.scss";
-@import "../../scss/layouts/header.scss";
+@import "../../scss/layouts/container";
+@import "../../scss/layouts/header";
 @import "../../scss/components/menu";
 @import "../../scss/base/burger";
 
@@ -18,4 +18,5 @@
 @import "../../scss/components/our-friends";
 @import "../../scss/components/help";
 @import "../../scss/components/in-addition";
-@import "../../scss/layouts/footer.scss";
+@import "../../scss/components/slider";
+@import "../../scss/layouts/footer";
