--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
   padding-top: 40px;
+  padding-bottom: 10px;
   color: $color-primary;
   @include font(20px, 115%, 400);
   letter-spacing: 0.06em;
