--- a/src/pages/main/style.scss
+++ b/src/pages/main/style.scss
@@ -19,4 +19,5 @@
 @import "../../scss/components/help";
 @import "../../scss/components/in-addition";
 @import "../../scss/components/slider";
+@import "../../scss/components/modal";
 @import "../../scss/layouts/footer";
