--- a/src/pages/pets/style.scss
+++ b/src/pages/pets/style.scss
@@ -1,9 +1,20 @@
-@import "../../scss/base/normalize.scss";
+@import "../../scss/base/normalize";
 
-@import "../../scss/abstract/constants.scss";
-@import "../../scss/abstract/mixins.scss";
-@import "../../scss/abstract/placeholder.scss";
+@import "../../scss/abstract/constants";
+@import "../../scss/abstract/mixins";
+@import "../../scss/abstract/placeholder";
 
-@import "../../scss/base/fonts.scss";
-@import "../../scss/base/base.scss";
-@import "../../scss/base/buttons.scss";
+@import "../../scss/base/fonts";
+@import "../../scss/base/base";
+@import "../../scss/base/buttons";
+
+@import "../../scss/layouts/container";
+@import "../../scss/layouts/header";
+
+@import "../../scss/components/menu";
+@import "../../scss/base/burger";
+@import "../../scss/components/our-friends";
+//@import "../../scss/components/pagination";
+@import "../../scss/components/modal";
+@import "../../scss/layouts/footer";
+
