--- a/src/pages/pets/style.scss
+++ b/src/pages/pets/style.scss
@@ -14,7 +14,7 @@
 @import "../../scss/components/menu";
 @import "../../scss/base/burger";
 @import "../../scss/components/our-friends";
-//@import "../../scss/components/pagination";
+@import "../../scss/components/pagination";
 @import "../../scss/components/modal";
 @import "../../scss/layouts/footer";
 
